<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe">


                    <EditText
                        android:id="@+id/cod_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:layout_marginLeft="2dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/cod_prod"
                        android:inputType="number"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <EditText
                        android:id="@+id/productor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/productor"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/cod_campos"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textSize="8sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <EditText
                        android:id="@+id/telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/telefono"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <EditText
                        android:id="@+id/inicio_cosecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/inicio_cosecha"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe">


                    <EditText
                        android:id="@+id/cajasEstimadas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/cajasEstimadas"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/postNvoMuestreo_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="18.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/fondo_btn"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="14dp"
                    android:text="@string/send"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>