<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="62dp">

                    <TextView
                        android:id="@+id/txtcod_prod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/negro"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="62dp">

                    <TextView
                        android:id="@+id/txtproductor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/negro"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp">

                    <TextView
                        android:id="@+id/txtcampo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/negro"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp">

                    <TextView
                        android:id="@+id/txtfecha_ejecucion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/negro"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <EditText
                        android:id="@+id/sectortxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/sector"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="12.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <EditText
                        android:id="@+id/fecha_ejecuciontxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:focusable="false"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/fecha_ejecucion"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/put_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="18.7dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/fondo_btn"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="14dp"
                    android:text="@string/save"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/titulo_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/negro"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    android:text="Sectores agregados"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="18.7dp"
                    android:layout_marginRight="62dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginRight="62dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_sectores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </RelativeLayout>
                <!--
                  <TableLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:paddingLeft="5dp"
                      android:paddingRight="5dp"
                      android:id="@+id/tbl_sectores">

                      <TextView
                          android:id="@+id/txt"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Sectores agregados:"
                          android:textSize = "15dp"
                          android:textStyle="bold">
                      </TextView>

                      <TableRow android:background="#83CBD3" android:padding="10dp">
                          <TextView
                              android:id="@+id/id_sector"
                              android:layout_width="30dp"
                              android:layout_height="wrap_content"
                              android:text="Id"
                              android:visibility="invisible"/>
                          <TextView
                              android:id="@+id/sectores"
                              android:layout_width="10dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1"
                              android:text="Sector" />
                          <TextView
                              android:id="@+id/btn_deleteSector"
                              android:layout_width="60dp"
                              android:layout_height="wrap_content"
                              android:text="Borrar" />

                      </TableRow>
                   &lt;!&ndash;   <TableRow android:padding="5dp">

                          <TextView
                              android:layout_width="30dp"
                              android:layout_height="wrap_content"/>
                          <TextView
                              android:layout_width="10dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1"/>

                          <ImageButton
                              android:id="@+id/delete_button"
                              android:layout_width="30dp"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center"
                              android:background="#F12C2C"
                              android:fontFamily="@font/poppins_medium"
                              android:gravity="center"
                              android:src="@drawable/ic_clear"
                              android:textColor="#ffffff"
                              android:textSize="10sp"
                              />

                      </TableRow>&ndash;&gt;

                  </TableLayout>-->

            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>